--- a/package.json
+++ b/package.json
@@ -26,10 +26,17 @@
   "bugs": {
     "url": "https://github.com/acquahsamuel/blonder/issues"
   },
+  "contributors": [
+    "Acquah Samuel <iamsamuelacquah@gmail.com>",
+    "Jonathan Reinink <jonathan@reinink.ca>"
+  ],
   "homepage": "https://github.com/acquahsamuel/blonder#readme",
   "dependencies": {
     "css-minify": "^1.1.0",
     "node-sass": "^6.0.1",
     "scss-compile": "^0.1.7"
+  },
+   "engines": {
+    "node": ">=12.13.0"
   }
 }
