--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "url": "https://github.com/acquahsamuel/blonder/issues"
   },
   "contributors": [
-    "Acquah Samuel <iamsamuelacquah@gmail.com>",
-    "Jonathan Reinink <jonathan@reinink.ca>"
+    "Acquah Samuel <iamsamuelacquah@gmail.com>"
   ],
   "homepage": "https://github.com/acquahsamuel/blonder#readme",
   "dependencies": {
