--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "url": "https://github.com/acquahsamuel/blonder/issues"
   },
   "contributors": [
-    "Acquah Samuel <iamsamuelacquah@gmail.com>",
-    "Jonathan Reinink <jonathan@reinink.ca>"
+    "Acquah Samuel <iamsamuelacquah@gmail.com>"
   ],
   "homepage": "https://github.com/acquahsamuel/blonder#readme",
   "dependencies": {
@@ -37,7 +36,11 @@
     "node-sass": "^6.0.1",
     "scss-compile": "^0.1.7"
   },
+  "publishConfig": {
+    "registry":"https://github.com/acquahsamuel/blonder.git"
+  },
   "engines": {
     "node": ">=12.13.0"
   }
 }
+
