--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   ],
   "homepage": "https://github.com/acquahsamuel/blonder#readme",
   "dependencies": {
+    "@babel/core": "^7.15.5",
     "colors": "^1.4.0",
     "css-minify": "^1.1.0",
     "node-sass": "^6.0.1",
@@ -40,4 +41,3 @@
     "node": ">=12.13.0"
   }
 }
-
